// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionSection  renders 1`] = `
<li
  className="p-accordion__group"
>
  <button
    aria-controls="#Uakgb_J5m9g-0JDMbcJqLJ"
    aria-expanded="false"
    className="p-accordion__tab"
    onClick={[Function]}
    role="tab"
    type="button"
  >
    Test section
  </button>
  <section
    aria-hidden="true"
    aria-labelledby="Uakgb_J5m9g-0JDMbcJqLJ"
    className="p-accordion__panel"
    id="Uakgb_J5m9g-0JDMbcJqLJ"
    role="tabpanel"
  >
    <span>
      Test
    </span>
  </section>
</li>
`;

exports[`AccordionSection  renders headings for titles 1`] = `
<li
  className="p-accordion__group"
>
  <button
    aria-controls="#Uakgb_J5m9g-0JDMbcJqLJ"
    aria-expanded="false"
    className="p-accordion__tab--with-title"
    onClick={[Function]}
    role="tab"
    type="button"
  >
    <h4
      className="p-accordion__title"
    >
      Test section
    </h4>
  </button>
  <section
    aria-hidden="true"
    aria-labelledby="Uakgb_J5m9g-0JDMbcJqLJ"
    className="p-accordion__panel"
    id="Uakgb_J5m9g-0JDMbcJqLJ"
    role="tabpanel"
  >
    <span>
      Test
    </span>
  </section>
</li>
`;
